--- a/src/main/resources/mainView.fxml
+++ b/src/main/resources/mainView.fxml
@@ -1,65 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.biacode.hermes.fx.fxml.MainView">
+<?import javafx.scene.text.TextFlow?>
+<?import javafx.scene.web.HTMLEditor?>
+<BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="org.biacode.hermes.fx.fxml.MainViewController">
     <top>
-        <MenuBar BorderPane.alignment="CENTER">
-            <menus>
-                <Menu mnemonicParsing="false" text="File">
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="Close"/>
-                    </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="Delete"/>
-                    </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="About"/>
-                    </items>
-                </Menu>
-            </menus>
-        </MenuBar>
-    </top>
-    <center>
-        <GridPane hgap="10.0" vgap="10.0" BorderPane.alignment="CENTER">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            </rowConstraints>
-            <padding>
-                <Insets top="10.0"/>
-            </padding>
-            <BorderPane.margin>
-                <Insets top="20.0"/>
-            </BorderPane.margin>
+        <VBox BorderPane.alignment="CENTER">
             <children>
-                <Label text="Email"/>
-                <TextField fx:id="email" promptText="Email" GridPane.columnIndex="1"/>
-                <Button mnemonicParsing="false" onAction="#handleLogin" text="Create account" GridPane.columnIndex="1"
-                        GridPane.rowIndex="1"/>
-                <TextArea fx:id="connectionResult" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2"/>
+                <MenuBar>
+                    <menus>
+                        <Menu mnemonicParsing="false" text="File">
+                            <items>
+                                <MenuItem mnemonicParsing="false" text="Close"/>
+                            </items>
+                        </Menu>
+                        <Menu mnemonicParsing="false" text="Edit">
+                            <items>
+                                <MenuItem mnemonicParsing="false" text="Delete"/>
+                            </items>
+                        </Menu>
+                        <Menu mnemonicParsing="false" text="Help">
+                            <items>
+                                <MenuItem mnemonicParsing="false" text="About"/>
+                            </items>
+                        </Menu>
+                    </menus>
+                </MenuBar>
+                <HBox spacing="10.0">
+                    <children>
+                        <TextField promptText="username"/>
+                        <PasswordField promptText="password"/>
+                        <Region HBox.hgrow="ALWAYS"/>
+                        <Button mnemonicParsing="false" onAction="#loginButtonClicked" text="Log In"/>
+                        <Button layoutX="344.0" layoutY="10.0" mnemonicParsing="false" text="Settings"/>
+                    </children>
+                    <VBox.margin>
+                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
+                    </VBox.margin>
+                </HBox>
             </children>
-        </GridPane>
-    </center>
+        </VBox>
+    </top>
     <left>
-        <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER"/>
+        <TreeView BorderPane.alignment="CENTER"/>
     </left>
+    <center>
+        <VBox spacing="10.0" BorderPane.alignment="CENTER">
+            <children>
+                <TextFlow>
+                    <padding>
+                        <Insets bottom="150.0" left="150.0" right="150.0" top="150.0"/>
+                    </padding>
+                </TextFlow>
+                <HTMLEditor
+                        htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;">
+                    <VBox.margin>
+                        <Insets/>
+                    </VBox.margin>
+                </HTMLEditor>
+            </children>
+            <BorderPane.margin>
+                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
+            </BorderPane.margin>
+            <padding>
+                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
+            </padding>
+        </VBox>
+    </center>
     <right>
-        <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER"/>
+        <VBox BorderPane.alignment="CENTER">
+            <children>
+                <TextFlow prefHeight="200.0" prefWidth="200.0"/>
+            </children>
+        </VBox>
     </right>
-    <bottom>
-        <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER"/>
-    </bottom>
 </BorderPane>
