--- a/src/main/resources/scenes/login.fxml
+++ b/src/main/resources/scenes/login.fxml
@@ -1,9 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.biacode.hermes.fx.controller.LoginController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="org.biacode.hermes.fx.controller.LoginController">
+   <children>
+      <AnchorPane prefHeight="400.0" prefWidth="279.0" style="-fx-background-color: #404552;"
+                  AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Label layoutX="62.0" layoutY="192.0" style="-fx-text-fill: F5F6F7;" text="HermesChat"/>
+         </children>
+      </AnchorPane>
+      <AnchorPane prefHeight="400.0" prefWidth="321.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                  AnchorPane.topAnchor="0.0">
+         <children>
+            <VBox alignment="CENTER" prefHeight="400.0" prefWidth="200.0" spacing="10.0" AnchorPane.bottomAnchor="0.0"
+                  AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <TextField alignment="CENTER" promptText="email">
+                     <opaqueInsets>
+                        <Insets/>
+                     </opaqueInsets>
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0"/>
+                     </VBox.margin>
+                     <padding>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                     </padding>
+                     <font>
+                        <Font size="18.0"/>
+                     </font>
+                  </TextField>
+                  <PasswordField alignment="CENTER" promptText="password">
+                     <opaqueInsets>
+                        <Insets/>
+                     </opaqueInsets>
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0"/>
+                     </VBox.margin>
+                     <padding>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                     </padding>
+                     <font>
+                        <Font size="18.0"/>
+                     </font>
+                  </PasswordField>
+                  <Button mnemonicParsing="false" text="Log In">
+                     <opaqueInsets>
+                        <Insets/>
+                     </opaqueInsets>
+                     <VBox.margin>
+                        <Insets/>
+                     </VBox.margin>
+                  </Button>
+               </children>
+            </VBox>
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
